--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,10 +28,21 @@ import '../styles/global.css';
 		<input type="text" id="inputField" placeholder="Type here...">
 		<div id="output"></div>
 
-		<script src="../../scripts/main.js" defer></script>
+		<div class="stopwatch-container">
+			<div class="stopwatch">00:00:00</div>
+			<button onclick="startStopwatch()">Start</button>
+			<button onclick="stopStopwatch()">Stop</button>
+			<button onclick="resetStopwatch()">Reset</button>
+		  </div>
 	</main>
 
 </Layout>
+
+
+
+<script src="../../scripts/main.js" defer></script>
+<script src="../../scripts/time.js" defer></script>
+
 <!-- 
 <style>
 	main {
